vlib/v/checker/tests/missing_import_or_block_path_err.vv
folder := '/Users/foxjazz/Documents/EVE/logs/ChatLogs'
entries := os.ls(folder) or { [] }
_ = entries
